:money_with_wings: gen swagger && refactor example swagger
